[gd_scene load_steps=14 format=3 uid="uid://cfmxw33nioy5g"]

[ext_resource type="Script" path="res://Scripts/boss4.gd" id="1_iljtk"]
[ext_resource type="Texture2D" uid="uid://bjeghg8gb06c0" path="res://Sprites/Light.png" id="2_tg1g2"]
[ext_resource type="Texture2D" uid="uid://olofe4nfgk68" path="res://Sprites/Enchanted Forest Characters with animations.png" id="3_aivxa"]
[ext_resource type="Script" path="res://Scripts/GolemLife.gd" id="4_waor7"]
[ext_resource type="Texture2D" uid="uid://wshs4jur2tgo" path="res://Sprites/HealthBar20.png" id="5_v3x04"]
[ext_resource type="Texture2D" uid="uid://g0l75fq6raog" path="res://Sprites/HatsTest.png" id="6_8nn31"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_dpmbe"]
size = Vector2(28, 35)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_lw5ja"]
size = Vector2(28, 35)

[sub_resource type="CircleShape2D" id="CircleShape2D_eh4k5"]
radius = 253.0

[sub_resource type="Animation" id="Animation_e14jl"]
resource_name = "Idle"
length = 1.5
loop_mode = 1
step = 0.25
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.25, 0.5, 0.75, 1, 1.25),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 1,
"values": [48, 49, 50, 51, 52, 53]
}

[sub_resource type="Animation" id="Animation_nnhpy"]
length = 0.35
loop_mode = 2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [136, 137, 138, 139]
}

[sub_resource type="Animation" id="Animation_1dg1r"]
resource_name = "Walking"
length = 0.4
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 1,
"values": [56, 57, 58, 59, 60]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_2ian5"]
_data = {
"Idle": SubResource("Animation_e14jl"),
"RESET": SubResource("Animation_nnhpy"),
"Walking": SubResource("Animation_1dg1r")
}

[node name="Golem Boss" type="CharacterBody2D" groups=["enemy"]]
collision_layer = 16
collision_mask = 275
script = ExtResource("1_iljtk")

[node name="Shadow" type="Sprite2D" parent="."]
modulate = Color(0, 0, 0, 1)
position = Vector2(2, 27)
scale = Vector2(0.073, 0.02125)
texture = ExtResource("2_tg1g2")

[node name="Sprite2D" type="Sprite2D" parent="."]
position = Vector2(0, -6)
texture = ExtResource("3_aivxa")
hframes = 8
vframes = 8
frame = 56

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(1, 8.5)
shape = SubResource("RectangleShape2D_dpmbe")

[node name="Area2D" type="Area2D" parent="."]
collision_layer = 16
collision_mask = 4

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2(1, 8.5)
shape = SubResource("RectangleShape2D_lw5ja")

[node name="Life" type="Container" parent="."]
offset_right = 40.0
offset_bottom = 40.0
script = ExtResource("4_waor7")

[node name="HealthBar" type="Sprite2D" parent="Life"]
position = Vector2(1.13687e-13, -16)
scale = Vector2(2.81818, 2.25)
texture = ExtResource("5_v3x04")
vframes = 20

[node name="PointLight2D" type="PointLight2D" parent="."]
visible = false
scale = Vector2(0.5, 0.5)
color = Color(0.407843, 0, 0.407843, 1)
energy = 0.5
texture = ExtResource("2_tg1g2")

[node name="ActivationBox" type="Area2D" parent="."]
visible = false
collision_layer = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="ActivationBox"]
shape = SubResource("CircleShape2D_eh4k5")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
root_node = NodePath("../Sprite2D")
autoplay = "Idle"
libraries = {
"": SubResource("AnimationLibrary_2ian5")
}

[node name="Attack" type="Timer" parent="."]
wait_time = 3.0

[node name="Attack2" type="Timer" parent="."]
wait_time = 4.0
one_shot = true

[node name="Throw" type="Timer" parent="."]
wait_time = 0.8

[node name="Hat" type="Sprite2D" parent="."]
visible = false
position = Vector2(5, -6)
scale = Vector2(0.6, 0.6)
texture = ExtResource("6_8nn31")
hframes = 15

[connection signal="area_entered" from="Area2D" to="." method="_on_area_2d_area_entered"]
[connection signal="area_entered" from="ActivationBox" to="." method="_on_activation_box_area_entered"]
[connection signal="timeout" from="Attack" to="." method="_on_attack_timeout"]
[connection signal="timeout" from="Attack2" to="." method="_on_attack_2_timeout"]
[connection signal="timeout" from="Throw" to="." method="_on_throw_timeout"]
